# fluxplayer

./: .gitignore  LICENSE.md  README.md  blartridge.py  blartridge.yaml  build.sh  cartridge.yaml  flux.py  flux.spec  install.sh  prompt.md  pyproject.toml  requirements.txt  rock_paper_scissors.py  setup.py  test.py
examples/find_maura_murray/: cartridge.py  cartridge.yaml  test.py
examples/find_maura_murray/lib/: event_self.py  evidence.py  image.py  people.py  special_states.py
examples/life_coach/: cartridge.py  cartridge.yaml
examples/murdertown/: cartridge.py  people.py  test.py  wikipedia.txt
examples/pmp_class/: outline
examples/rock_paper_scissors/: cartridge.py  cartridge.yaml
lib/: path_reader.py  prompt.py
src/: flux.py
src/lib/: path_reader.py  prompt.py
