[tool.poetry]
name = "flux player"
version = "0.0.0"
description = "The missing OS for LLMs"
authors = ["Adam Grant <hello@adamgrant.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "./"}]

[tool.poetry.dependencies]
python = "^3.8"
ruamel-yaml = "^0.18.5"
ruamel-yaml-clib = "^0.2.8"

[tool.poetry.scripts]
flux = "flux:cli"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"